# HRT-Imaging-Tool

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  HRTImagingTool.sln  README.md  vcpkg.json
HITgui/: CMakeLists.txt  HITgui.vcxproj  HITgui.vcxproj.filters  HRTImagingToolApp.cpp  HRTImagingToolApp.h  HRTImagingToolDialog.cpp  HRTImagingToolDialog.h  HRTImagingToolIncludes.h  HRTImagingToolParameterDialog.cpp  HRTImagingToolParameterDialog.h  HRTImagingToolResource.cpp  HRTImagingToolResource.fbp  HRTImagingToolResource.h  HRTImagingToolResource.xrc  pch.cpp  pch.h
HITlogic/: 3DBuffer.cpp  3DBuffer.h  3DCloud.cpp  3DCloud.h  BorderCropper.cpp  BorderCropper.h  BrightnessCorrection.cpp  BrightnessCorrection.h  CMakeLists.txt  Compositing.cpp  Compositing.h  Compositing3DCloud.cpp  Compositing3DCloud.h  CompositingFactory.cpp  CompositingFactory.h  CompositingFusion.cpp  CompositingFusion.h  CompositingMax.cpp  CompositingMax.h  CompositingParameters.cpp  CompositingParameters.h  CompositingTiling.cpp  CompositingTiling.h  CompositingVoxelBuffer.cpp  CompositingVoxelBuffer.h  CorrelationOffset.cpp  CorrelationOffset.h  CorrelationOffsetClassifier.cpp  CorrelationOffsetClassifier.h  CorrelationParameters.cpp  CorrelationParameters.h  DIPLOMTable.cpp  DIPLOMTable.h  DIPLOMTableRow.cpp  DIPLOMTableRow.h  GlobalPositioningParameters.h  HITlogic.vcxproj  HITlogic.vcxproj.filters  HRTGlobalPositioning.cpp  HRTGlobalPositioning.h  (+140 more)
ImageIO/: CMakeLists.txt  IIO_Defines.h  ImageExporter.cpp  ImageExporter.h  ImageIO.vcxproj  ImageIO.vcxproj.filters  ImageIOException.cpp  ImageIOException.h  ImageImporter.cpp  ImageImporter.h  stdafx.cpp  stdafx.h  targetver.h
Utilities/: AbstractMatrix.cpp  AbstractMatrix.h  AbstractVector.cpp  AbstractVector.h  ArrayUtilities.h  CMakeLists.txt  Cancelable.h  Compare.cpp  Compare.h  Computable.h  DateTimeUtilities.cpp  DateTimeUtilities.h  DenseMatrix.cpp  DenseMatrix.h  DenseVector.cpp  DenseVector.h  EnvironmentVariable.cpp  EnvironmentVariable.h  FileUtilities.cpp  FileUtilities.h  Graph.cpp  Graph.h  InsructionSet.cpp  InstructionSet.h  Log.cpp  Log.h  MathTools.cpp  MathTools.h  Point.cpp  Point.h  Progress.h  ProgressForwarder.h  ProgressListener.h  Progressing.h  Regex.cpp  Regex.h  SLESolver.cpp  SLESolver.h  SQLiteDatabase.cpp  SQLiteDatabase.h  (+31 more)
alglib/: CMakeLists.txt  alglib.vcxproj  alglib.vcxproj.filters
img_data/: 01_LE.tif  README.md
img_data/01_LE_mosaicking/: 01_LE.sqlite  01_LE_m1.tif  01_LE_m2.tif  01_LE_m3.tif  01_LE_m4.tif  01_LE_m5.tif  01_LE_m6.tif  01_LE_m7.tif
